--- a/TodoListApp.WebApp/Views/_ViewImports.cshtml
+++ b/TodoListApp.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TodoListApp.WebApp
 @using TodoListApp.WebApp.Models
+@using TodoListApp.WebApp.Models.Post
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
