--- a/TodoListApp.WebApp/Views/TaskDetails/Index.cshtml
+++ b/TodoListApp.WebApp/Views/TaskDetails/Index.cshtml
@@ -82,7 +82,7 @@
                     @Html.AntiForgeryToken()
                     <input type="hidden" name="taskId" value="@Model.Id" />
                     <input type="hidden" name="tagId" value="@tag.Id" />
-                    <button type="submit" class="btn btn-link text-danger">Remove</button>
+                    <button type="submit" class="btn btn-link text-danger">✖</button>
                 </form>
             </span>
         }
