--- a/TodoListApp.WebApp/Views/TaskDetails/Index.cshtml
+++ b/TodoListApp.WebApp/Views/TaskDetails/Index.cshtml
@@ -95,7 +95,7 @@
 
     @if (TempData["Tags"] != null)
     {
-        var availableTags = JsonSerializer.Deserialize<TaskTagModel[]>(TempData["Tags"].ToString());
+        var availableTags = JsonSerializer.Deserialize<TaskTagModel[]>(TempData["Tags"]!.ToString());
 
         <div id="tag-picker-overlay" class="tag-picker-overlay">
             <div class="tag-picker">
@@ -103,7 +103,7 @@
                     @Html.AntiForgeryToken()
                     <input type="hidden" name="taskId" value="@Model.Id" />
                     <div>
-                        @foreach (var tag in availableTags)
+                        @foreach (var tag in availableTags!)
                         {
                             <button type="submit" name="tagId" value="@tag.Id" class="btn btn-outline-primary">@tag.Tag</button>
                         }
